# BYOD-Compliance-Monitoring-Tool---Unified-Entry-Point

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  contact_extractor.py  gitignore  install.ps1  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
