[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byod-compliance-monitor"
version = "1.0.0"
description = "Authorized and consent-based BYOD compliance assessment tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Brian Secord" }
]
keywords = ["byod", "compliance", "android", "device-management", "security"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Typing :: Typed"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/OWNER/REPOSITORY"
Issues = "https://github.com/OWNER/REPOSITORY/issues"
Repository = "https://github.com/OWNER/REPOSITORY"

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  ".venv",
  "build",
  "dist",
  "output",
  "logs",
  "temp_data"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
exclude = "^(build|dist|output|logs|temp_data)/"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
